Minor documentation improvement.  Also,  the on-line GPS listing can be sorted by distance to target.

--- a/gps_expl.htm
+++ b/gps_expl.htm
@@ -125,8 +125,8 @@ position is for one telescope,  probably the IRTF.  As described at
 the above link,  one can instead use 'codes' such as Sub for Subaru,
 Ke1 and Ke2 for the two Keck telescopes,  and so on.  Positions are
 also given for scopes at Cerro Tololo,  Cerro Paranal,  Kitt Peak,
-Haleakal&#x101;,  and La Silla that would be lumped into one position
-by MPC. </p>
+Haleakal&#x101;,  La Silla,  and some others that would be lumped
+into one position by MPC. </p>
 
 <p> Also,  you can <a href="#contact"> send me your latitude,  longitude,
 and altitude</a> and I'll either correct the MPC's position or add
@@ -171,7 +171,9 @@ delivered by that launch,  and a C piece which is the booster left as
 junk from the launch.) </p>
 
 <p> &bull; YYNNNL : the international designation is frequently abbreviated
-to a two-digit year with no dash. </p>
+to a two-digit year with no dash.  'YY' of 57 or above is implicitly for
+1957-1999. 'YY' of 56 or less is for 2000-2056.  Presumably,  our
+children will have to work out a solution for the Y2057 Crisis. </p>
 
 <h2> <a name="to_do"> Remaining things to do </a> </h2>
 
