--- a/gps_find.htm
+++ b/gps_find.htm
@@ -39,6 +39,7 @@ action="/cgi-bin/gps/list_gps.cgi" onreset="return confirm('Do you really want t
 <input type="radio" name="sort" value="3"                  > Altitude above horizon   <br>
 <input type="radio" name="sort" value="4"                  > GNSS designation (such as 'G20' or 'R02') <br>
 <input type="radio" name="sort" value="5"                  > International designation (such as '2000-025A' or '2006-062A') <br>
+<input type="radio" name="sort" value="7"                  > Distance <br>
 <br>
 <input type="radio" name="ang_fmt" value="0" checked="checked"> RA/dec in base 60 (Babylonian) <br>
 <input type="radio" name="ang_fmt" value="1"                  > RA/dec in decimal degrees <br>
