--- a/ObsCodes.htm
+++ b/ObsCodes.htm
@@ -51,7 +51,7 @@ Code  Long.   cos      sin    Name
 048  15.840800.641709+0.764432Hradec Kralove
 049  17.6067 0.5088  +0.8580  Uppsala-Kvistaberg
 050  18.0582 0.51118 +0.85660 Stockholm (before 1931)
-051  18.4766 0.83055 -0.55508 Cape
+051  18.4766 0.83055 -0.55508 Royal Observatory, Cape of Good Hope
 052  18.3083 0.51224 +0.85597 Stockholm-Saltsjobaden
 053  18.9642 0.67688 +0.73373 Konkoly Observatory, Budapest (since 1934)
 054  11.6654 0.56595 +0.82169 Brorfelde
@@ -267,6 +267,7 @@ Code  Long.   cos      sin    Name
 267 204.530440.941705+0.337234New Horizons KBO Search-CFHT
 268 289.308030.875516-0.482342New Horizons KBO Search-Magellan/Clay
 269 289.309140.875510-0.482349New Horizons KBO Search-Magellan/Baade
+276  20.382790.608295+0.791076Plonsk
 277 356.8175 0.56158 +0.82467 Royal Observatory, Blackford Hill, Edinburgh
 278 116.4494 0.76818 +0.63809 Peking, Transit of Venus site
 279  10.728220.631526+0.772827Seeberg Observatory, Gotha (1787-1857)
@@ -1371,11 +1372,19 @@ F65 203.7424 0.93624 +0.35154 Haleakala-Faulkes Telescope North
 F84 210.3842 0.95330 -0.30100 Hibiscus Observatory, Punaauia
 F85 210.3842 0.95330 -0.30100 Tiki Observatory, Punaauia
 F86 210.383810.953304-0.301004Moana Observatory, Punaauia
+G06   4.671500.619980+0.781996Dordrecht, Sterrenburg
+G07   3.063860.719394+0.692378Millau Observatory
 G08   1.996940.748752+0.660794Observatorio Les Pedritxes, Matadepera
 G09   0.610560.621784+0.780574SWF Observatory, South Woodham Ferrers
 G10 354.450550.792574+0.607765Clavier Observatory, Lora Del Rio
+G11   7.183790.630712+0.773465Breitenweg Observatory, Herkenrath
+G16  13.348690.787948+0.613701OmegaLab Observatory, Palermo
+G17  11.202610.723508+0.688023BAS Observatory, Scandicci
+G18  11.263830.712881+0.698948ALMO Observatory, Padulle
 G19  12.7460 0.63252 +0.77202 Immanuel Kant Observatory,Limbach
 G20   6.059890.727743+0.683615Brignoles Observatory
+G21  13.737890.796024+0.603377Osservatorio Castrofilippo
+G22   9.214390.655435+0.752770Experimenta Observatory, Heilbronn
 G23  19.092340.675698+0.734739Vulpecula Observatory, Budapest
 G24   9.093500.662443+0.746701Dettenhausen
 G25 288.1050 0.70317 +0.70867 Sherbrooke
@@ -1698,7 +1707,7 @@ J41 353.8189 0.59779 +0.79897 Raheny
 J42 359.6989 0.77138 +0.63425 Puzol
 J43 352.133540.856441+0.515339Oukaimeden Observatory, Marrakech
 J44 357.6552 0.73506 +0.67596 Observatorio Iturrieta, Alava
-J45 344.6779 0.88370 +0.46678 Observatorio Montana Cabreja, Vega de San Mateo
+J45 344.467350.883626+0.466916Observatorio Montana Cabreja, Vega de San Mateo
 J46 346.3594 0.87569 +0.48131 Observatorio Montana Blanca, Tias
 J47 346.4440 0.87501 +0.48260 Observatorio Nazaret
 J48 343.6960 0.87977 +0.47393 Observatory Mackay, La Laguna
@@ -1890,7 +1899,7 @@ L34  14.020610.789742+0.611548Galhassin Robotic Telescope, Isnello
 L35  30.5086 0.64055 +0.76537 DreamSky Observatory, Lisnyky
 L36  14.780080.645319+0.761467Ondrejov--BlueEye600 Telescope
 L37 353.738830.803937+0.592739Observatorio Alnitak, El Puerto de Santa Maria
-L38   9.699970.615648+0.785407Gartensternwarte Schafsweide, Schelde
+L38   9.699970.615648+0.785407Gartensternwarte Schafsweide, Sehlde
 L39  11.040310.723062+0.688490Osservatorio Spica, Signa
 L40   6.956810.654011+0.754011Sternwarte Saarbruecken Rastpfuhl
 L41  12.301810.720683+0.691022Ponte Uso
@@ -1915,19 +1924,29 @@ L59   1.226060.651546+0.756108Compustar Observatory, Rouen
 L60  30.697220.644961+0.761695Popovich Observatory, Ivanivka
 L61  20.810280.845575-0.532593MONET South, Sutherland
 L62  12.528890.719467+0.692209Hypatia Observatory, Rimini
+L63  11.009140.723671+0.687849HOB Observatory, Capraia Fiorentina
+L64   9.363140.701822+0.710005Martesana Observatory, Cassina de Pecchi
+L65   8.828310.602059+0.795784Bredenkamp Observatory, Bremen
+L66  20.811220.845577-0.532615MeerLICHT-1, Sutherland
 L67  37.798890.561057+0.825033Cherkizovo Observatory, Moscow Oblast
+L68  25.536830.830048-0.555874PESCOPE, Port Elizabeth
 L71  38.5839 0.71089 +0.70101 Vedrus Observatory, Azovskaya
 L72  38.6928 0.55979 +0.82589 Melezhy Astrophoto Observatory
 L75  26.463940.527292+0.846853Tartu Observatory of Tartu University
+L76  39.651610.683530+0.727483Nomad Observatory, Kochevanchik
+L79  18.220390.696477+0.715222BOSZA Observatory, Szalanta
 L80  18.0175 0.91802 -0.39574 SpringBok Observatory, Tivoli
+L81  16.361690.919631-0.392204Skygems Namibia Remote Observatory
 L82 352.679500.775227+0.629726Crow Observatory, Portalegre
 L83 356.222310.791355+0.609451UJA Observatory, Jaen
 L84  41.279890.695443+0.716182Kairos Observatory, Letnik
+L93   1.772210.752844+0.65601 Garraf Observatory, Sant Pere de Ribes
 L94 354.145610.728187+0.683146Observatorio MOMA, Oviedo
 L95 358.951590.793164+0.607000Observatorio Astronomico de Cartagena
 L96  44.2745 0.76340 +0.64416 ISON-Byurakan Observatory
 L97 357.991610.624666+0.778298Castle Fields Observatory, Calne
 L98 357.434250.789394+0.612232La Sagra Observatory, Puebla de Don Fadrique
+M42  54.6708 0.90990 +0.41343 Emirates Observatory, Al Rahba
 M43  54.684780.912805+0.407034Al Sadeem Observatory, Abu Dhabi
 N27  73.7253 0.57847 +0.81298 Omsk-Yogik Observatory
 N30  74.3694 0.85369 +0.51909 Zeds Astronomical Observatory, Lahore
@@ -1937,6 +1956,7 @@ N43  77.1167 0.16712 -0.98328 Plateau Observatory for Dome A, Kunlun Station
 N50  78.963830.842176+0.538692Himalayan Chandra Telescope, IAO, Hanle
 N55  80.026230.846497+0.532089Corona Borealis Observatory, Ngari
 N87  87.175030.727076+0.684720Nanshan Station, Xinjiang Observatory
+N88  87.173220.727098+0.684697Xingming Observatory #3, Nanshan
 O02  90.526140.866434+0.498958Galaxy Tibet YBJ Observatory,Yangbajing
 O37  98.485530.948521+0.316891TRT-NEO, Chiangmai
 O43  99.781110.994005+0.109127Observatori Negara, Langkawi
@@ -1955,7 +1975,9 @@ P64 127.004890.796371+0.602805GSHS Observatory, Suwon
 P66 127.446750.824763+0.563603Deokheung Optical Astronomy Observatory
 P67 127.7415 0.79040 +0.61057 Kangwon National University Observatory
 P73 129.0820 0.81744 +0.57412 BSH Byulsem Observatory, Busan
+P87 132.094190.830358+0.555374Hirao Observatory, Yamaguchi
 P93 133.544330.823371+0.565729Space Tracking and Communications Center, JAXA
+Q02 135.493440.825315+0.562809Sakai Observatory, Osaka
 Q11 137.520690.820236+0.570158Shinshiro
 Q19 139.4390 0.81430 +0.57852 Machida
 Q21 139.853350.804747+0.591654Southern Utsunomiya
@@ -1978,6 +2000,7 @@ Q66 149.064250.855627-0.516205Siding Spring-Janess-G, JAXA
 Q67 149.492330.835816-0.547369JBL Observatory, Bathurst
 Q68 150.337420.832917-0.551813Blue Mountains Observatory, Leura
 Q69 150.449330.832777-0.551945Hazelbrook
+Q78 152.947890.886807-0.460619Woogaroo Observatory, Forest Lake
 Q79 152.8481 0.88871 -0.45696 Samford Valley Observatory
 Q80 153.2160 0.88762 -0.45904 Birkdale
 R57 170.472780.720489-0.691309Aorangi Iti Observatory, Lake Tekapo
@@ -1987,6 +2010,7 @@ T04 203.742490.936241+0.351538Haleakala-LCO OGG B #2
 T05 203.742990.936235+0.351547ATLAS-HKO, Haleakala
 T08 204.423950.943290+0.332467ATLAS-MLO, Mauna Loa
 T09 204.523980.941706+0.337237Mauna Kea-UH/Tholen NEO Follow-Up (Subaru)
+T10 204.522410.941706+0.337212Submillimeter Array, Mauna Kea (SMA)
 T12 204.530570.941729+0.337199Mauna Kea-UH/Tholen NEO Follow-Up (2.24-m)
 T14 204.531130.941714+0.337236Mauna Kea-UH/Tholen NEO Follow-Up (CFHT)
 U53 237.1603 0.70274 +0.70909 Murray Hill Observatory, Beaverton
@@ -1996,6 +2020,7 @@ U56 237.869170.795044+0.604511Palo Alto
 U57 237.841280.795776+0.603616Black Mountain Observatory, Los Altos
 U63 239.194560.681217+0.729770Burnt Tree Hill Observatory, Cle Elum
 U64 239.461510.683272+0.727821CWU-Lind Observatory, Ellensburg
+U65 239.459830.683247+0.727841CWU Observatory, Ellensburg
 U67 240.203580.776325+0.628595Jack C. Davis Observatory, Carson City
 U68 240.587010.799040+0.599620JPL SynTrack Robotic Telescope, Auberry
 U69 240.5870 0.79904 +0.59962 iTelescope SRO Observatory, Auberry
@@ -2004,11 +2029,13 @@ U71 241.3633 0.82520 +0.56305 AHS Observatory, Castaic
 U72 241.460000.828150+0.558687Tarzana
 U73 241.6172 0.83164 +0.55346 Redondo Beach
 U76 242.1279 0.82855 +0.55810 Glendora
+U77 242.9181 0.84002 +0.54076 Rani Observatory, San Diego
 U78 242.8449 0.82758 +0.55989 Cedar Glen Observatory
 U79 242.791870.838837+0.542598Cosmos Research Center, Encinitas
 U80 243.6151 0.82737 +0.56004 CS3-DanHenge Observatory, Landers
 U81 243.615140.827367+0.560037CS3-Trojan Station, Landers
 U82 243.615190.827368+0.560036CS3-Palmer Divide Station, Landers
+U83 243.573110.841238+0.53938 Mount Laguna Observatory
 U96 246.686000.579007+0.812698Athabasca University Geophysical Observatory
 V00 248.399810.849456+0.526492Kitt Peak-Bok
 V01 248.239110.762243+0.645493Mountainville Observatory, Alpine
@@ -2025,12 +2052,15 @@ V11 249.211190.847025+0.530011Saguaro Observatory, Tucson
 V12 249.398190.852110+0.522050Elgin
 V14 248.783360.762292+0.645691Moose Springs Observatory, Timber Lakes
 V16 251.102880.849510+0.526194Dark Sky New Mexico, Animas
+V19 251.790860.841371+0.539217Whiskey Creek Observatory
+V20 251.778220.827004+0.560943Killer Rocks Observatory, Pie Town
 V23 252.764060.828722+0.558332FOAH Observatory, Magdalena
 V26 253.390200.911283+0.410639UAS-ISON Observatory, Cosala
 V28 254.346470.817018+0.575271Deep Sky West Observatory, Rowe
 V29 254.266600.840062+0.541466Tzec Maun Cloudcroft Facility
 V30 254.471050.840710+0.540313Heaven on Earth Observatory, Mayhill
 V31 254.4750 0.84061 +0.54046 Hazardous Observatory, Mayhill
+V32 254.471310.840709+0.540308Canvas View New Mexico Skies, Mayhill
 V34 255.369920.778401+0.626222Black Forest
 V35 255.918810.861839+0.506046Deep Sky Observatory Collaborative, Pier 5
 V36 255.617420.843042+0.536333The Ranch Observatory, Lakewood
@@ -2046,6 +2076,7 @@ V83 266.257280.781733+0.621590Rolling Hills Observatory, Warrensburg
 V86 266.8927 0.78221 +0.62099 Rattle Snake Observatory, Sedalia
 V88 267.428110.820618+0.569618River Ridge Observatory, Conway
 V93 268.616110.759765+0.648058Pin Oak Observatory, Fort Madison
+V94 268.661690.759876+0.647933Cherokeeridge Observatory, Fort Madison
 W04 271.009440.761606+0.645927Mark Evans Observatory, Bloomington
 W08 271.883310.747086+0.662545Jimginny Observatory, Naperville
 W11 272.6247 0.75272 +0.65618 Northwest Indiana Robotic Telescope, Lowell
@@ -2056,6 +2087,7 @@ W22 275.004470.844595+0.533635WestRock Observatory, Columbus
 W25 275.635060.776417+0.628165RMS Observatory, Cincinnati
 W28 276.3883 0.83011 +0.55581 Ex Nihilo Observatory, Winder
 W30 276.771170.838735+0.542749Georgia College Observatory, Milledgeville
+W31 277.237360.834226+0.549613Deerlick Observatory, Crawfordville
 W32 277.237500.834222+0.549619Crawfordville Observatory
 W33 277.834510.819315+0.571499Transit Dreams Observatory, Campobello
 W34 277.8453 0.81784 +0.57360 Squirrel Valley Observatory, Columbus
@@ -2067,10 +2099,12 @@ W54 282.289440.785431+0.616890Mark Slade Remote Observatory, Wilderness
 W55 282.583890.773703+0.631447Natelli Observatory, Frederick
 W61 283.744920.713380+0.698447Leeside Observatory, Elgin
 W63 284.309580.996767+0.082976Observatorio Astronomico UTP, Pereira
+W65 284.791690.697761+0.713966Observatoire GOZ, Montpellier
 W66 285.053810.756278+0.652109SVH Observatory, Blairstown
 W67 285.102110.759453+0.648444Paul Robinson Observatory, Voorhees State Park
 W70 285.913860.698475+0.713264Loose Goose Observatory, Saint-Jerome
 W71 285.992970.717404+0.694456Rand II Observatory, Lake Placid
+W74 289.262450.873451-0.486040Danish Telescope, La Silla
 W75 289.609440.910001-0.414150SPECULOOS-South Observatory, Paranal
 W76 289.236950.862826-0.504288CHILESCOPE Observatory, Rio Hurtad
 W77 287.4010 0.75196 +0.65702 Skyledge Observatory, Killingworth
@@ -2100,6 +2134,7 @@ X00 292.601250.910349-0.413802Observatorio Astronomico Tolar
 X01 289.235020.862846-0.504270Observatory Hurtado, El Sauce
 X02 289.235170.862833-0.504255Telescope Live, El Sauce
 X03 289.203610.862286-0.505209Observatoire SADR, Poroto
+X12 295.712000.803430-0.593455Observatorio Los Cabezones
 X13 295.4498 0.85269 -0.52103 Observatorio Remoto Bosque Alegre
 X14 295.832220.854475-0.517879Observatorio Orbis Tertius, Cordoba
 X31 299.479340.850485-0.524263Galileo Galilei Observatory, Oro Verde
@@ -2114,7 +2149,13 @@ Y00 315.215040.935906-0.351562SONEAR Observatory, Oliveira
 Y16 318.687940.929268-0.368170ROCG, Campos dos Goytacazes
 Y28 321.3126 0.98840 -0.15179 OASI, Nova Itacuruba
 Y40 324.038890.989706-0.143217Discovery Observatory, Caruaru
-Z14 353.372260.786773+0.615335Fregenal de la Sierra
+Z08 357.591390.794477+0.605566Telescope Live, Oria
+Z09 356.8786 0.62844 +0.77527 Old Orchard Observatory, Fiddington
+Z10 353.372350.786766+0.615329PGC, Fregenal de la Sierra
+Z11 358.966690.601635+0.796115Appledorne Observatory, Farnsfield
+Z12 359.0961 0.78494 +0.61762 La Romaneta, Monovar
+Z13 355.545190.802515+0.594662Observatorio AGP GUAM 4, Malaga
+Z14 353.372260.786773+0.615335ART, Fregenal de la Sierra
 Z15 359.653310.630352+0.773724Southwater
 Z16 358.951920.793166+0.607001Asociacion Astronomica de Cartagena
 Z17 343.488270.881476+0.471456Tenerife-LCO Aqawan A #2
