Added logo and link to 'explanation' page

--- a/gps_expl.htm
+++ b/gps_expl.htm
@@ -1,11 +1,15 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0//EN">
 <html><head>
    <title> Calibrating timing of astronomical images using navigation satellites </title>
+   <link REL="icon" HREF="favicon.ico" TYPE="image/x-icon">
    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
    <meta name="Author" content="Bill Gray">
 </head>
 
-<h1> Calibrating timing of astronomical images using navigation satellites </h1>
+<h1> <IMG SRC="logo.png" ALT="logo">
+ Calibrating timing of astronomical images using navigation satellites </h1>
+
+<p> <i> <a href="tools.htm"> Overview of tools for asteroid observers on this site </a> </i> </p>
 
 <h2> Overview </h2>
 
