Various changes to 'gps_eph.htm' documentation,  mostly a tip of the hat to Dave Tholen

--- a/gps_eph.htm
+++ b/gps_eph.htm
@@ -1,11 +1,14 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0//EN">
 <html><head>
    <title> GNSS satellite ephems </title>
+   <link REL="icon" HREF="favicon.ico" TYPE="image/x-icon">
    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
    <meta name="Author" content="Bill Gray">
 </head>
 <body>
-<h1> GNSS satellites ephems </h1>
+
+<h1> <IMG SRC="logo.png" ALT="logo">
+ GNSS satellites ephems </h1>
 
 <p> <i> <a href="#changes"> Updated 2018 Jan 1 </a> </i> </p>
 
@@ -124,8 +127,11 @@ to find the object,  but not good enough to really measure timing accurately. </
 <p> My thanks go to Jaime Nomen and Noelia S&aacute;nchez Ortiz for their
 thoughts on using navigation satellites for timing astrometry,  and for
 providing <a href="https://www.projectpluto.com/pluto/mpecs/navst43.htm">
-some example astrometry for testing that I was getting the right answers.
-</a> </p>
+some example astrometry for testing that I was getting the right answers; </a>
+and to Dave Tholen for doing some really amazing tests of the sort
+that require a 2.2-m telescope,  the extreme conditions on Mauna Kea,
+and really knowing how to get the last bit of precision out of astrometry.
+</p>
 
 <h2> <a name="changes"> Change log </a> </h2>
 
