--- a/gps_expl.htm
+++ b/gps_expl.htm
@@ -11,7 +11,18 @@
 
 <p> <i> <a href="tools.htm"> Overview of tools for asteroid observers on this site </a> </i> </p>
 
-<h2> Overview </h2>
+<ul>
+<li> <a href="#overview"> Overview of how to calibrate image timing and why you should do it </a> </li>
+<li> <a href="#procedure"> Basic procedure </a> </li>
+<li> <a href="#tles"> Ephemeris sources </a> </li>
+<li> <a href="#sites"> Low-precision site locations and how to fix them </a> </li>
+<li> <a href="#required"> How good should I try to get my timing? </a> </li>
+<li> <a href="#to_do"> Remaining things to do </a> </li>
+<li> <a href="#source"> Source code </a> </li>
+<li> <a href="#contact"> Contact info </a> </li>
+</ul>
+
+<h2> <a name="overview"> Overview of how to calibrate image timing and why you should do it </a> </h2>
 
 <p> Getting the timing right in astronomical imaging is both
 important and surprisingly difficult to do.  The common tendency seems
@@ -28,6 +39,15 @@ that passeth all understanding,  one exposure duration too early.
 which the software took to mean the end of the exposure?)  Or the
 time the image was written out to the hard disk.
 
+<p> It's relatively common for me to look at astrometric data and see
+that one observer is,  relative to the others,  "late" or "early" by
+a significant amount.  Those are the good cases;  I can just exclude
+their data.  More pernicious are cases where the timing is <i> just
+barely </i> off,  enough to bias all their observations a bit,  but
+not enough for me to recognize the bias.  To make it (much) worse,
+<a href="#systematic"> timing errors are usually systematic,  not
+random.</a> </p>
+
 <p> About the only way to really verify that the image times are
 correct is to check them against a known object.  Global Navigation
 Satellite Systems (GNSS) provide satellites that move about 40 arcseconds
@@ -41,12 +61,17 @@ GPS (United States),  GLONASS (Soviet Union/Russia),  Galileo (Europe),
 BeiDou (China),  and QZSS (Japan).  The positions should be good to
 within centimeters,  more than good enough for our purposes.
 
-<p> The basic procedure is to <a href="gps_find.htm"> get a list of
+<h2> <a name="procedure"> Basic procedure </a> </h2>
+
+<p> First,  you'll need to <a href="gps_find.htm"> get a list of
 GNSS satellites visible at your location for a given time.</a>  You
 can then pick out one or more to observe;  I recommend choosing those
 at high elongations from the sun,  but not actually in the earth's
 shadow.  The brightness of these satellites tends to drop quickly
-when they're far from opposition.
+when they're far from opposition.  Also,  for reasons discussed
+below,  it's well to stick to those lacking an asterisk before
+the RA.  You will generally have at least a dozen possible targets
+at any given time. </p>
 
 <p> Then,  for each satellite you wish to observe,  you can
 <a href="gps_eph.htm"> create ephemerides for a particular satellite</a>
@@ -62,7 +87,9 @@ seven seconds,  and adjust your timing accordingly.
 <p> What you might fail to notice in this case is that a 20-second
 duration would be off by twelve seconds,  if the time reported was
 that of the end of the exposure,  plus two seconds while the image
-was downloaded from the camera.
+was downloaded from the camera.  There are a <i>lot</i> of possible
+failure modes here.  Also,  with more observations,  you can rule
+out spurious observations and just use the more reliable data. </p>
 
 <p> Once you've gotten astrometry,  you can <a href="gps_ast.htm">
 upload your astrometry and find out how far off you were. </a>  The
@@ -103,7 +130,7 @@ but not where to point our telescopes tonight.
 satellites.  You may find that limiting yourself only to those
 constellations is not,  in practice,  all that limiting.
 
-<h2> <a name="sites"> Low-precision site locations </a> </h2>
+<h2> <a name="sites"> Low-precision site locations and how to fix them </a> </h2>
 
 <p> The positions given for observatories are,  with few exceptions,
 from <a href="https://www.minorplanetcenter.net/iau/lists/ObsCodes.html">
@@ -113,13 +140,14 @@ of the same list is available</a> that adds a few details and explanations.)
 The MPC list provides,  at best,  a precision of about 6.4 meters in
 altitude and latitude (10<sup>-6</sup> of the earth's radius).  In
 some cases,  one or even two fewer digits are given.  When that
-happens,  you get a warning message about loss of precision. </p>
+happens,  you get a warning message about the lack of precision. </p>
 
 <p> The degree to which you should worry about this varies.  At
 least one user of these tools is investigating errors at the millisecond
 level.  In one millisecond,  a GPS satellite moves about three meters.
 If your observatory positions is chopped off to 64-meter precision,
 you can still correct your timing to within about 40 milliseconds.
+For most people, <a href="#required"> that's more than good enough. </a> </p>
 
 <p> You <i>may</i> find an 'observatory code' in my
 <a href="https://github.com/Bill-Gray/find_orb/blob/master/rovers.txt">
@@ -136,6 +164,40 @@ into one position by MPC. </p>
 and altitude</a> and I'll either correct the MPC's position or add
 an entirely new "MPC code" (unofficial,  of course!) so you can get
 correct data. </p>
+
+<h2> <a name="required"> How good should I try to get my timing? </a> </h2>
+
+<p> The required timing accuracy depends largely on how fast the objects
+you observe are moving.  Let's say you sometimes look at objects moving
+as fast as 0.2 arcseconds/second (= 12"/minute = 12'/hour),  and your
+astrometry is good to 0.5 arcseconds. </p>
+
+<p> In that case,  if your timing was bad by 2.5 seconds,  it would
+introduce an error of 0.5",  meaning it would contribute as much error
+as your ability to measure the object's position.  You really want to
+knock the error down to something much less than that.  I would be
+inclined to worry about anything that adds more than about 20% to the
+astrometric error;  for that,  you'd want to get the timing error
+down to 2.5 * 20% = half a second. </p>
+
+<p> <a name="systematic"></a>
+ Some would argue you should strive for still more accurate timing.
+The pernicious thing about timing errors is that they are likely to
+bias all of your observations by the same amount.  In contrast,
+your astrometric errors will (usually) cancel out;  you'll be off
+by +0.3 arcseconds the first time,  -0.2 the next,  and so on.
+Get enough data,  and you'll gradually improve things. </p>
+
+<p> Timing errors,  on the other hand,  are usually systematic,
+not random.  If your clock is off by 2.5 seconds,  and there's
+only a small random component to the timing errors,  you'll be
+off by (say) +2.5 seconds,  +2.4 seconds, +2.7 seconds...  no
+matter how much data you gather,  it'll all be biased the same
+way. </p>
+
+<p> The tools on these pages really ought to let you knock down
+timing problems to be a tiny fraction of your overall errors,
+and I don't think you'll usually find it difficult to do so. </p>
 
 <h2> <a name="desigs"> Designations for GNSS satellites </a> </h2>
 
@@ -198,6 +260,17 @@ observers, you'll just get a spot-check at larger intervals.
 170 GNSS satellites found by the NEAT survey</a> between 1996 to 2002,
 and I've run similar searches for three other telescopes.  But the
 code is not particularly easy for anyone else to use at this point.
+
+<h2> <a name="source"> Source code </a> </h2>
+
+<p> <a href="https://github.com/Bill-Gray/gps_ephem/"> C and C++ source code
+for these tools is available on GitHub. </a> As noted there,  you probably
+don't really need it if you're just trying to fix your timing.  I
+do see that a few people have downloaded the source.  I will bet
+that most of them made use of the bits for puzzling out satellite
+positions for use in other projects,  quite possibly not related
+in any way to astronomy or image timing.  (Not,  of course,  that
+there's anything wrong with that.) </p>
 
 <h2> <a name="contact"> Contact info </a> </h2>
 
